# python-examples

./: README.md
packaging-example/: README.md  pyproject.toml
packaging-example/src/packaging-example/: main.py
unittest-example/: README.md  pyproject.toml  setup.py  tox.ini
unittest-example/src/unittest-example/: config.py
unittest-example/src/unittest_example/: config.py
unittest-example/tests/: test_config.py
