# Specifies what packages are needed to build the project e.g wheel
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Defines the project properties used to define your package.
[project]
name = "packaging-example"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Example of how to package a python project."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jlarouche94/python-examples"
"Bug Tracker" = "https://github.com/jlarouche94/python-examples/issues"